# silly

./: .gitignore  BUILD.md  MEMORY_SAFETY_AUDIT.md  Makefile  andysys.s  bochsrc.txt  first_boot.s  old.code-workspace  second_boot.s  silly.code-workspace
andy_elf/: .gitignore  BUILD.meson.md  Makefile  basic_console.inc  basic_console.s  c_exceptions.c  cfuncs.h  cfuncs.s  config.c  cpuid.h  exceptions.s  inkernel_memory_tests.c  ioports.asm  kernel.map  kickoff.s  linker.ld  memlayout.asm  memlayout.inc  memops.asm  meson.build  mmgr.c  mmgr.h  multiboot.c  panic.c  stdio_funcs.c  test.c  test_mmgr.c  test_stubs.c
andy_elf/8259pic/: 8259pic.c  8259pic.h  Makefile  interrupts.asm  interrupts.h  ioapic.c  ioapic.h  meson.build  picroutines.asm  picroutines.h
andy_elf/acpi/: Makefile  apic.c  apic.h  meson.build  rsdp.c  sdt_header.c  search_mem.asm  search_mem.c  search_mem.h  shortcut.c
andy_elf/drivers/: Makefile  meson.build
andy_elf/drivers/ata_pio/: Makefile  ata.c  ata_bus.h  ata_pio.h  ata_readwrite.h  basic_routines.asm  detect.c  interrupt.c  meson.build  readwrite.c
andy_elf/drivers/cmos/: Makefile  lowlevel.asm  lowlevel.h  meson.build  rtc.c  rtc.h
andy_elf/drivers/early_serial/: Makefile  meson.build  serial.h  serial_lowlevel.asm
andy_elf/drivers/kb/: Makefile  keyboard.c  meson.build  pending_operation_list.c  pending_operation_list.h
andy_elf/drivers/pci/: Makefile  meson.build  pci_categorisation.h  pci_data.h  pci_ide.c  pci_ide.h  pci_ops.c  pci_ops.h  pci_scanner.c  pci_scanner.h
andy_elf/drivers/ps2_controller/: Makefile  builtin_keymap.h  controller.c  controller.h  keymap.c  keymap.h  lowlevel.asm  lowlevel.h  meson.build
andy_elf/fs/: Makefile  fs.c  fs.h  meson.build
andy_elf/fs/vfat/: Makefile  cluster_map.c  cluster_map.h  dirops.c  fatbuffer.c  fileops.c  meson.build  vfat.c  vfat.h
andy_elf/include/: cfuncs.h  cpuid.h  errors.h  fs.h  kernel_config.h  malloc.h  memops.h  multiboot.h  panic.h  process.h  spinlock.h  stdio.h  string.h  types.h  volmgr.h
andy_elf/include/acpi/: fadt.h  madt.h  rsdp.h  rsdt.h  sdt_header.h
andy_elf/include/console/: basic_console.h
andy_elf/include/drivers/: generic_storage.h  kb_buffer.h
andy_elf/include/exeformats/: elf.h
andy_elf/include/fs/: fat_dirops.h  fat_fileops.h  fat_fs.h  vfat.h
andy_elf/include/native_api/: apicodes.h  errors.h
andy_elf/include/scheduler/: scheduler.h
andy_elf/include/sys/: gdt.h  ioports.h  mmgr.h
andy_elf/include/utils/: ringbuffer.h
andy_elf/include/x86/: idt.h  segmentation.h
andy_elf/mmgr/: Makefile  heap.c  heap.h  meson.build  mmgr.c  process.c  process.h  test_mmgr.c
andy_elf/native_api/: Makefile  apicodes.asm  apicodes.inc  console.c  console.h  dispatcher.c  dispatcher.h  meson.build  native_api.asm  process_ops.c  process_ops.h  stream_ops.c  stream_ops.h
andy_elf/process/: Makefile  cleanup.c  elfloader.c  elfloader.h  meson.build  shell_process.c
andy_elf/scheduler/: Makefile  lowlevel.asm  lowlevel.h  meson.build  scheduler.c  scheduler_task.c  scheduler_task_internals.h
andy_elf/utils/: Makefile  debug.c  debug.h  meson.build  ringbuffer.c  spinlock.c  string.asm  teststring.c  ucs_conv.c  ucs_conv.h
andy_elf/volmgr/: Makefile  meson.build  volmgr.c  volmgr_internal.h
andy_elf/x86/: Makefile  idt.c  setup_idt.c  setup_idt.h
andy_sys/: Makefile  andysys.s  exceptions.s
elf_loader/: .gitignore  Makefile  bochsrc.txt  elf_boot  elf_boot.asm  elf_boot.s  elf_format.asm  elf_format.s  runtest.sh
keymaps/: README.md  mapping2binary.py
microdos/: .gitignore  Makefile  basic_console.s  c_exceptions.c  cfuncs.s  cpuid.asm  exceptions.inc  exceptions.s  gen_bochs_map.sh  init.asm  main.c  memlayout.asm  memops.asm  stdio_funcs.c
microdos/8259pic/: 8259pic.c  8259pic.h  Makefile  interrupts.asm  interrupts.h  ioapic.c
microdos/drivers/: Makefile
microdos/drivers/bios_disk/: Makefile  bios_data_area.h  bios_disk.c  bios_disk.h
microdos/include/: cfuncs.h  errors.h  malloc.h  memops.h  panic.h  stdarg.h  stdio.h  volmgr.h  wordsize.h
microdos/include/sys/: idt.h  ioports.h  mmgr.h  pagefault.h  x86_control_registers.h
microdos/mmgr/: Makefile  heap.c  heap.h  mmgr.c  mmgr.h
microdos/test/: bochsrc.txt  install_loader  reset_test.sh
microdos/test/pmldr/: pmldr
microdos/utils/: Makefile  gdt32.c  gdt32.h  idt32.c  idt32.h  memlayout.h  panic.c  regstate.h  stdio_funcs.c  tss32.c  tss32.h  v86.c  v86.h
microdos/volmgr/: Makefile  fstypes.h  mbr.c  mbr.h  volmgr.c  volmgr.h
old/andy_sys/: Makefile  andysys.s  irqs.s  memlayout.asm
old/elf_loader/: .gitignore  bochsrc.txt  elf_format.asm  runqemu.sh
old/pmldr/: Makefile  bochsrc.old  bochsrc.txt  reset_test.sh  runqemu.sh  runqemu_486sx.sh  runqemu_dbg.sh
old/pmldr/bootsect/: bootsect.asm
old/pmldr/install_loader/: .gitignore  (+2 more)
pmldr/: Makefile  bochsrc.txt  partitioned_test.sh  reset_test.sh  runqemu.sh  runqemu_486sx.sh
pmldr/bootsect/: Makefile  bootsect.asm
pmldr/install_loader/: .gitignore  Makefile  copier.c  copier.h  fs.c  fs.h  install_loader  install_loader.c  vfat.h
pmldr/pmldr/: .gitignore  Makefile  ata.asm  convertmap.sh  fs.asm  mainloader.asm  pmldr.asm  prologue.asm  utils_32bit.asm
shell.app/: .gitignore  Makefile  shell.app  start.asm
tools/: .gitignore  Makefile  bochsrc.txt  inject.c  makegrub.sh  makegrub_hdd.sh  runqemu.sh  runqemu_486sx.sh  updategrub_hdd.sh
tools/keymaps/: 104key.json  88key.json  binary2header.py
userland/: newlib
userland-test/: first_test.c  stubs.c
userland/newlib-4.5.0.20241231/: .gitignore  config.sub
userland/test/: .gitignore  crt0.asm  stubs.c
vfat_test/: .gitignore  Makefile  README.md  cluster_map.c  cluster_map.h  dir.c  dir.h  fake_storage_driver.c  fake_storage_driver.h  fat_fs.c  fat_fs.h  file.c  file.h  generic_storage.h  mounter.c  mounter.h  string_helpers.c  string_helpers.h  ucs_conv.c  vfat.h  vfat_directory_cache.c  vfat_directory_cache.h  vfat_test  vfat_test.c
vfat_test/utils/: Makefile  directory_queue.c  directory_queue.h  generic_queue.c  generic_queue.h
(+12 files in other folders)
